--- a/paint.css
+++ b/paint.css
@@ -1,36 +1,35 @@
-#canvas 
-{ 
+#canvas { 
     border: 1px solid black; 
     margin: 10px 0 10px 0; 
     cursor: pointer; 
 } 
-#colors button 
-{ 
+
+#colors button { 
     width: 40px; 
     height: 40px; 
     border-radius: 100%; 
     margin-top: 0px; 
 } 
-#black  
-{ 
+
+#black  { 
     background: black; 
 } 
-#pink  
-{ 
+
+#pink { 
     background: pink; 
-} 
-#red 
-{ 
+}
+
+#red { 
     background: red; 
 } 
-#green  
-{  
+
+#green{  
     background: green; 
 } 
-#blue  
-{ 
+#blue  { 
     background: blue; 
 } 
+
 #orange  
 { 
     background: orange; 
